# JPQuant

./: 13_backtesting.py  4-algo_orders.py  6_sma.py  77_930backtest.py  77_adx_macd.py  77_backtesting.py  7_rsi.py  8_vwap.py  ADXStrategy.html  BTC-USD.csv  BollingerBandsStrategy.html  BollingerStrategy.html  BreakoutStrategy.html  CupAndHandleStrategy.html  CupHandleStrategy.html  CurvedPriceChannelStrategy.html  EMACrossoverRSIStrategy.html  EMAWilliamsStrategy(fast_ema_period=10,slow_ema_period=25,willr_period=70).html  EMAWilliamsStrategy(fast_ema_period=20,slow_ema_period=55,willr_period=60).html  EMAWilliamsStrategy.html  ETH_2h_5000.csv  ElliottWaveStrategy.html  FMAStrategy.html  FastMeanRevertPDEStrategy.html  FixedMomentumStrategy.html  FlatRegressionStrategy.html  LRTCStrategy.html  LinRegChannelStrategy.html  LinearRegAngleStrategy.html  LinearRegressionCurveStrategy.html  LinearRegressionLineStrategy.html  LinearRegressionStrategy.html  LiquidityChannelStrategy.html  MACDStrategy.html  MeanReversionStrategy.html  ModifiedMACrossover.html  ModifiedMAStrategy.html  MovingAverageCrossover.html  MyStrategy(timeperiod=18).html  MyStrategy.html  (+69 more)
10_day10_bots/: 10_bot1.py
11_day11_bots/: 11_bot2.py
12_day12_bots/: 12_bot3.py  cdp_api_key.json  nice_funcs.py
5_risk/: 5_risk.py  5_risk_mgmt_hl.py  nice_funcs.py
9_more_indicators/: 9_vwma.py  key_file.py  pandas_ta_review.py
Hyperliquid/: MAN-1h-30wks_data.csv  bot.py  chart_plotter.py  coinbase_dont_share.py  data_from_coinbase.py  data_from_hyperliquid.py  formatted_bal.json  nice_funcs.py  sdz_bot.py  (+2 more)
(+741 files in other folders)
